crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@289.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_elem where i <@ int4range(10,50);"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_elem"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..63
    ColumnRef@43..44
      Ident@43..44 "i"
    Whitespace@44..45 " "
    Op@45..47 "<@"
    Whitespace@47..48 " "
    FuncCall@48..63
      Ident@48..57 "int4range"
      Ascii40@57..58 "("
      AConst@58..60
        Iconst@58..60 "10"
      Ascii44@60..61 ","
      AConst@61..63
        Iconst@61..63 "50"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

