crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@299.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_range_excl\n  values(int4range(124, 124, '[]'), int4range(3, 3, '[]'), '[2010-01-02 10:10, 2010-01-02 11:10)');"
---
InsertStmt@0..127
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "test_range_excl"
  Newline@27..28 "\n"
  Whitespace@28..30 "  "
  SelectStmt@30..125
    Values@30..36 "values"
    Ascii40@36..37 "("
    List@37..125
      FuncCall@37..61
        Ident@37..46 "int4range"
        Ascii40@46..47 "("
        AConst@47..50
          Iconst@47..50 "124"
        Ascii44@50..51 ","
        Whitespace@51..52 " "
        AConst@52..55
          Iconst@52..55 "124"
        Ascii44@55..56 ","
        Whitespace@56..57 " "
        AConst@57..61
          Sconst@57..61 "'[]'"
      Ascii41@61..62 ")"
      Ascii44@62..63 ","
      Whitespace@63..64 " "
      FuncCall@64..84
        Ident@64..73 "int4range"
        Ascii40@73..74 "("
        AConst@74..75
          Iconst@74..75 "3"
        Ascii44@75..76 ","
        Whitespace@76..77 " "
        AConst@77..78
          Iconst@77..78 "3"
        Ascii44@78..79 ","
        Whitespace@79..80 " "
        AConst@80..84
          Sconst@80..84 "'[]'"
      Ascii41@84..85 ")"
      Ascii44@85..86 ","
      Whitespace@86..87 " "
      AConst@87..125
        Sconst@87..125 "'[2010-01-02 10:10, 2 ..."
  Ascii41@125..126 ")"
  Ascii59@126..127 ";"

