crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[a,z) - '::textrange;"
---
SelectStmt@0..29
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..28
    TypeCast@7..28
      AConst@7..17
        Sconst@7..17 "'[a,z) - '"
      Typecast@17..19 "::"
      TypeName@19..28
        Ident@19..28 "textrange"
  Ascii59@28..29 ";"

