crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@307.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[123.001, 5.e9)'::float8range @> 888.882::float8;"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      TypeCast@7..37
        AConst@7..24
          Sconst@7..24 "'[123.001, 5.e9)'"
        Typecast@24..26 "::"
        TypeName@26..37
          Ident@26..37 "float8range"
      Whitespace@37..38 " "
      Op@38..40 "@>"
      Whitespace@40..41 " "
      TypeCast@41..56
        AConst@41..48
          Fconst@41..48 "888.882"
        Typecast@48..50 "::"
        TypeName@50..56
          Ident@50..56 "float8"
  Ascii59@56..57 ";"

